tried to fix latex overflow

--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -211,3 +211,8 @@ table td {
 table tr:hover {
   background-color: $white;
 }
+
+.MathJax { 
+  word-wrap: break-word; 
+  overflow-wrap: break-word; 
+}
